[gd_scene load_steps=3 format=3 uid="uid://3ojicee5uvti"]

[ext_resource type="Script" path="res://Scripts/shop_screen.gd" id="1_hvcpq"]
[ext_resource type="PackedScene" uid="uid://dlnfcvb81dju4" path="res://Scenes/upgrade_button.tscn" id="2_h18hm"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvcpq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="MoneyLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Return"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HigherMoneyUpgrade" parent="HBoxContainer/VBoxContainer2/Panel" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = 146.0
offset_top = 276.0
offset_right = 176.0
offset_bottom = 306.0
upgrade_cost = 2
upgrade_name = "HigherMoney"

[node name="FasterBallUpgrade" parent="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = 53.0
offset_top = -66.0
offset_right = 83.0
offset_bottom = -36.0
disabled = true
upgrade_cost = 4
upgrade_name = "FasterBall"

[node name="MoreBallUpgrade" parent="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = 39.0
offset_top = -75.0
offset_right = 69.0
offset_bottom = -45.0
disabled = true
upgrade_cost = 8
upgrade_name = "MoreBall"

[node name="BiggerPaddleUpgrade" parent="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = -29.0
offset_top = -79.0
offset_right = 1.0
offset_bottom = -49.0
disabled = true
upgrade_cost = 5
upgrade_name = "BiggerPaddle"

[node name="UpgradeButton" parent="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade/BiggerPaddleUpgrade" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = -30.0
offset_top = -113.0
offset_right = 0.0
offset_bottom = -83.0
upgrade_cost = 3
upgrade_name = "LongerGameTime"

[node name="HigherMoney2Upgrade" parent="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade" instance=ExtResource("2_h18hm")]
layout_mode = 0
offset_left = -59.0
offset_top = -57.0
offset_right = -29.0
offset_bottom = -27.0
disabled = true
upgrade_cost = 15
upgrade_name = "HigherMoney2"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 132.0
offset_top = 77.0
offset_right = 185.0
offset_bottom = 152.0
text = "Bigger
paddle
5
"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 78.0
offset_top = 275.0
offset_right = 135.0
offset_bottom = 350.0
text = "HIgher
Money
Chance 2
"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 233.0
offset_top = 205.0
offset_right = 311.0
offset_bottom = 254.0
text = "faster ball
4"

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 234.0
offset_top = 84.0
offset_right = 308.0
offset_bottom = 133.0
text = "8
more ball"

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = -10.0
offset_top = 196.0
offset_right = 104.0
offset_bottom = 245.0
text = "hiiigher monet
chncw 15"

[node name="Label6" type="Label" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 43.0
offset_top = 7.0
offset_right = 137.0
offset_bottom = 30.0
text = "more time 3"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade" to="." method="_on_higher_money_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade" to="." method="_on_faster_ball_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade/MoreBallUpgrade" to="." method="_on_more_ball_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade/BiggerPaddleUpgrade" to="." method="_on_bigger_paddle_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/FasterBallUpgrade/BiggerPaddleUpgrade/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/HigherMoneyUpgrade/HigherMoney2Upgrade" to="." method="_on_higher_money_2_upgrade_pressed"]
